<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WeatherFragment">


    <ImageView
        android:id="@+id/iv_day_night"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_day_night">

        <TextView
            android:id="@+id/tv_today_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/sunday_21_april_2007_7_54pm"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/country_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="Kyrgyzstan, Bishkek"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="240dp"
            android:orientation="vertical"
            android:paddingVertical="24dp"
            android:paddingStart="34dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_today_date">
            <!--1________Облачность_________-->
            <ImageView
                android:id="@+id/weather_img"
                android:layout_width="40dp"
                android:layout_height="26dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                />

            <TextView
                android:id="@+id/tv_weather"
                style="@style/weather_info"
                android:text="Cloudy"
                android:textSize="18sp" />
            <ImageView
                style="@style/weather_img"
                 />

            <TextView
                android:id="@+id/tv_humidity_number"
                style="@style/weather_info"
                android:layout_marginStart="12dp"
                android:text="45%" />

            <TextView
                style="@style/weather_info_hint"
                android:text="Humidity" />
            <ImageView
                style="@style/weather_img"
                 />

            <TextView
                android:id="@+id/tv_sunrise_time"
                style="@style/weather_info"
                android:text="3:25 AM" />

            <TextView
                style="@style/weather_info_hint"
                android:layout_marginStart="6dp"
                android:text="Sunrise" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_temp"
            style="@style/weather_info"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="25"
            android:textSize="50sp"
            app:layout_constraintEnd_toStartOf="@id/country_city"
            app:layout_constraintHorizontal_bias="0.008"
            app:layout_constraintStart_toEndOf="@id/linear1"
            app:layout_constraintTop_toBottomOf="@id/tv_today_date" />

        <TextView
            android:id="@+id/tv_temp_celsius"
            style="@style/weather_info_hint"
            android:paddingTop="8dp"
            android:text="@string/c"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/tv_temp"
            app:layout_constraintTop_toTopOf="@id/tv_temp" />


        <TextView
            android:id="@+id/expected_temp"
            style="@style/weather_info_hint"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="35°C↑\n16°C↓"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_temp_celsius"
            app:layout_constraintTop_toTopOf="@id/tv_temp_celsius" />


        <LinearLayout
            android:id="@+id/container_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/linear1"
            app:layout_constraintEnd_toStartOf="@id/linear3"
            app:layout_constraintStart_toEndOf="@id/linear1"
            app:layout_constraintTop_toBottomOf="@id/tv_temp">


            <ImageView
                android:id="@+id/pressure_img"
                style="@style/weather_img"
                android:layout_marginStart="24dp"
                android:src="@drawable/spidometr" />

            <TextView
                android:id="@+id/tv_pressure_power"
                style="@style/weather_info"
                android:text="@string/_1_665mbar" />

            <TextView
                android:id="@+id/pressure"
                style="@style/weather_info_hint"
                android:layout_marginStart="12dp"
                android:text="@string/pressure" />


            <ImageView
                style="@style/weather_img"
                android:layout_marginStart="24dp"
                android:src="@drawable/sunset" />

            <TextView
                android:id="@+id/sunset_time"
                style="@style/weather_info"
                android:layout_marginStart="8dp"
                android:text="@string/_4_59pm" />

            <TextView
                style="@style/weather_info_hint"
                android:layout_marginStart="16dp"
                android:text="@string/sunset" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/linear1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/container_2"
            app:layout_constraintTop_toBottomOf="@id/tv_temp">
            <ImageView
                style="@style/weather_img"
                android:layout_marginStart="36dp"
                android:src="@drawable/wind" />

            <TextView
                android:id="@+id/wind_power"
                style="@style/weather_info"
                android:layout_marginStart="20dp"
                android:text="@string/_17_km_h" />

            <TextView
                style="@style/weather_info_hint"
                android:layout_marginStart="36dp"
                android:text="@string/wind" />


            <ImageView

                style="@style/weather_img"
                android:layout_marginStart="36dp"
                />

            <TextView
                android:id="@+id/tv_day_time"
                style="@style/weather_info"
                android:layout_marginStart="20dp"
                android:text="@string/_21h_1m" />

            <TextView
                style="@style/weather_info_hint"
                android:layout_marginStart="24dp"
                android:text="@string/daytime" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>